[workspace]
members = [
    "borrowing/context",
    "borrowing/pstack",
    "borrowing/bst",
    "std-collections/comm",
    "std-collections/lru-cache",
    "std-collections/prefix",
    "intro/combinations",
    "intro/conway",
    "intro/min-queue",
    "traits/flatmap",
    "traits/itertools",
    "traits/mpsc",
    "traits/trust",
    "modules/ripgzip",
    "modules/trie",
    "parallel/threadpool",
    "parallel/pargrep",
    "parallel/tcp_proxy"]
